--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "description": "A Quasar Framework app",
   "productName": "Quasar Apex Charts",
-  "cordovaId": "org.cordova.quasar.app",
   "author": "Patrick Monteiro <eng.patrickmonteiro@gmail.com>",
   "private": true,
   "scripts": {
@@ -14,12 +13,13 @@
     "@quasar/extras": "^1.8.2",
     "apexcharts": "^3.19.2",
     "axios": "^0.18.1",
-    "quasar": "^1.12.4",
+    "core-js": "^3.6.5",
+    "quasar": "^1.12.7",
     "vue-apexcharts": "^1.4.0",
     "vue-i18n": "^8.18.2"
   },
   "devDependencies": {
-    "@quasar/app": "^1.9.6",
+    "@quasar/app": "^2.0.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.10.0",
@@ -27,11 +27,20 @@
     "eslint-plugin-vue": "^5.0.0"
   },
   "engines": {
-    "node": ">= 8.9.0",
-    "npm": ">= 5.6.0",
-    "yarn": ">= 1.6.0"
+    "node": ">= 10.18.1",
+    "npm": ">= 6.13.4",
+    "yarn": ">= 1.21.1"
   },
   "browserslist": [
-    "last 1 version, not dead, ie >= 11"
+    "ie >= 11",
+    "last 10 Chrome versions",
+    "last 10 Firefox versions",
+    "last 4 Edge versions",
+    "last 7 Safari versions",
+    "last 8 Android versions",
+    "last 8 ChromeAndroid versions",
+    "last 8 FirefoxAndroid versions",
+    "last 10 iOS versions",
+    "last 5 Opera versions"
   ]
 }
