--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,32 @@
-.quasar
 .DS_Store
 .thumbs.db
 node_modules
+
+# Quasar core related directories
+.quasar
 /dist
-/docs
+
+# Cordova related directories and files
 /src-cordova/node_modules
 /src-cordova/platforms
 /src-cordova/plugins
 /src-cordova/www
+
+# Capacitor related directories and files
+/src-capacitor/www
+/src-capacitor/node_modules
+
+# BEX related directories and files
+/src-bex/www
+/src-bex/js/core
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # Editor directories and files
 .idea
-.vscode
 *.suo
 *.ntvs*
 *.njsproj
