--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "quasar": "^2.9.2",
     "vue": "^3.0.0",
+    "vue-i18n": "^9.3.0-beta.6",
     "vue-router": "^4.0.0",
     "vue3-apexcharts": "^1.4.1"
   },
