--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.15.11",
+    "@quasar/extras": "^1.16.9",
     "apexcharts": "^3.36.0",
     "axios": "^1.1.3",
     "core-js": "^3.6.5",
-    "quasar": "^2.11.7",
+    "driver.js": "^1.3.1",
+    "quasar": "^2.14.1",
     "vue": "^3.0.0",
     "vue-i18n": "^9.3.0-beta.6",
     "vue-router": "^4.0.0",
@@ -22,7 +23,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
-    "@quasar/app-webpack": "^3.7.2",
+    "@quasar/app-webpack": "^3.12.1",
     "eslint": "^7.14.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.19.1",
